--- a/src/ads_runner_client/pubspec.yaml
+++ b/src/ads_runner_client/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   # Maps
   flutter_map: ^7.0.0
   latlong2: ^0.9.0
+  flutter_secure_storage: ^10.0.0
 
 dev_dependencies:
   flutter_test:
